<resources>
    <string name="app_name">CRM</string>
    <string name="thongtinlienhe">Thông tin liên hệ</string>
    <string name="taonguoilienhe">Tạo người liên hệ</string>
    <string name="thongtin">Thông tin người liên hệ</string>
    <string name="thongtinkhac">Thông tin khác</string>
    <string name="danhxung">Danh xưng</string>
    <string name="hovatendem">Họ và tên đệm</string>
    <string name="ten">Tên <font color='#FF0000'>*</font></string>
    <string name="congty">Công ty</string>
    <string name="gioitinh">Giới tính</string>
    <string name="didong">Di động <font color='#FF0000'>*</font></string>
    <string name="email">Email</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="loai">Loại</string>
    <string name="nguon">Nguồn</string>
    <string name="btnhuy">Hủy</string>
    <string name="btnluu">Lưu</string>

    <string name="thongtindiachi">Thông tin địa chỉ</string>
    <string name="diachi">Địa chỉ</string>
    <string name="quan">Quận/Huyện</string>
    <string name="tinh">Tỉnh/TP</string>
    <string name="quocgia">Quốc gia</string>

    <string name="thongtinmota">Thông tin mô tả</string>
    <string name="mota">Mô tả</string>
    <string name="ghichu">Ghi chú đặc biệt</string>

    <string name="thongtinquanly">Thông tin quản lý</string>
    <string name="giaocho">Giao cho <font color='#FF0000'>*</font></string>
    <string name="danhgia">Đánh giá</string>



    <string name="chitietnguoilienhe">Chi tiết người liên hệ</string>
    <string name="nguoitao">Người tạo</string>
    <string name="nguoiphutrach">Người phụ trách</string>
    <string name="tongquan">Tổng quan</string>
    <string name="chitiet">Chi tiết</string>
    <string name="nhatky">Nhật ký</string>
    <string name="cohoi">Cơ hội</string>
    <string name="thongtinchung">Thông tin chung</string>
    <string name="thongtinmuahang">Thông tin mua hàng</string>
    <string name="tinhtrangmuahang">Tình trạng mua hàng</string>
    <string name="sodonhangdamua">Số đơn hàng đã mua</string>
    <string name="tongdoanhthu">Tổng doanh thu</string>
    <string name="thongtinhethong">Thông tin hệ thống</string>
    <string name="ngaytao">Ngày tạo</string>
    <string name="ngaysua">Ngày sửa</string>


    <string name="cuocgoi">Cuộc gọi</string>
    <string name="cuochop">Cuộc họp</string>
    <string name="congviec">Công việc</string>
    <string name="hoatdongdalenlich">Hoạt động đã lên lịch</string>

    <string name="tieude">Tiêu đề <font color='#FF0000'>*</font></string>



</resources>